--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Job Matching</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="width: 100%; height: 100vh;"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="/src/assets/js/bootstrap.bundle.js"></script>
   </body>
 </html>
